K8s/base/flagd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flagd
  labels:
    app: flagd
    app.kubernetes.io/version: "1.12.0"
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: flagd
  template:
    metadata:
      labels:
        app: flagd
    spec:
      containers:
        - name: flagd
          image: ghcr.io/open-feature/flagd:v0.11.1
          imagePullPolicy: IfNotPresent
          command:
            - /flagd-build
            - start
            - --uri
            - file:./etc/flagd/demo.flagd.json
          ports:
            - containerPort: 8013
              name: flagd-service
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8014
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8014
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "50m"
              memory: "40Mi"
            limits:
              cpu: "100m"
              memory: "75Mi"
          volumeMounts:
            - name: config-rw
              mountPath: /etc/flagd       
        - name: flagdui
          image: ghcr.io/open-telemetry/demo:1.12.0-flagdui
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
              name: flagdui-service
          resources:
            requests:
              cpu: "50m"
              memory: "40Mi"
            limits:
              cpu: "100m"
              memory: "75Mi"
          volumeMounts:
            - name: config-rw
              mountPath: /app/data        
      volumes:
        - name: config-rw
          emptyDir: {}                  
        - name: config-ro
          configMap:
            name: flagd-flags-config
