K8s/base/flagd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opentelemetry-demo-flagd
  labels:
    app: flagd
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  type: ClusterIP
  selector:
    app: flagd
  ports:
    - name: grpc-service      
      port: 8013
      targetPort: 8013
    - name: tcp-ui    
      port: 4000       
      targetPort: 4000
